--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
 .CENTER { width:100%}
 .BOTTOM {margin-bottom:10%}
 .LEFT {float: left; width: 20%}
-.MIDDLE {float: left; width: 60%;}
+.MIDDLE {float: left; text-align: center; width: 60%;}
 .RIGHT {float: left; width: 20%}
