--- a/style.css
+++ b/style.css
@@ -4,3 +4,4 @@
 .LEFT {float: left; width: 20%}
 .MIDDLE {float: left; text-align: center; width: 60%;}
 .RIGHT {float: left; width: 20%}
+a{display:block;}
